# bijux-cli

./: .editorconfig  .gitattributes  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PROJECT_TREE.md  SECURITY.md  TESTS.md  TOOLING.md  USAGE.md  changelog.html  code_of_conduct.html  community.html  contributing.html  index.html  license.html  mkdocs.yml  nav.html  objects.inv  package-lock.json  package.json  project_tree.html  pytest.ini  security.html  sitemap.xml  tests.html  tooling.html  tox.ini  usage.html
ADR/: 0002-global-flags-precedence.html  0003-docstring-and-documentation-style.html  0004-linting-quality-security.html  index.html
CODE_OF_CONDUCT/: index.html
SECURITY/: index.html
changelog/: index.html
code_of_conduct/: index.html
config/: bijux.dic  cosmic-ray.toml  coveragerc.ini  mypy.ini  pyrightconfig.json  ruff.toml
contributing/: index.html
docs/: code_of_conduct.md  community.md  contributing.md  index.md  license.md  nav.md  project_tree.md  security.md  tests.md  tooling.md  usage.md
license/: index.html
makefiles/: api.mk  build.mk  citation.mk  docs.mk  hooks.mk  lint.mk  publish.mk  quality.mk  sbom.mk  security.mk  test.mk
nav/: index.html
plugin_template/: __init__.py  cookiecutter.json  pyproject.toml
plugin_template/{{cookiecutter.project_slug}}/: __init__.py  plugin.json  plugin.py
reference/: api.html  cli.html  httpapi.html  index.html
scripts/: helper_mkdocs.py
search/: search_index.js  search_index.json
security/: index.html
tests/: __init__.py  (+1 more)
(+285 files in other folders)
